@@ -7,28 +7,14 @@
 <?php get_header(); ?>
 <div id="content">
 	<?php if ( have_posts() ) : ?>
+
 		<?php
 			the_archive_title( '<h1 class="page-title">', '</h1>' );
 			the_archive_description( '<div class="archive-description">', '</div>' );
 		?>
 
 		<?php while ( have_posts() ) : the_post(); ?>
-			<h2 class="post-title">
-				<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php printf(__('Permalink to %s', 'myknowledgebase'), the_title_attribute('echo=0')); ?>"> <?php the_title(); ?></a> 
-			</h2>
-
-			<?php get_template_part( 'postmeta' ); ?>
-
-			<?php if ( has_post_thumbnail() ) { 
-				the_post_thumbnail(); 
-			} ?>
-
-			<?php the_excerpt(); ?>
-
-			<div class="more">
-				<a class="readmore" href="<?php the_permalink() ?>" rel="bookmark"><?php _e( 'Read More &raquo;', 'myknowledgebase' ); ?></a>
-			</div>
-
+			<?php get_template_part( 'content-list' ); ?>
 		<?php endwhile; ?>
 
 		<div class="post-nav">
@@ -36,11 +22,11 @@
 			<?php previous_posts_link(); ?>
 		</div>
 
-		<?php else: ?>
-			<h1 class="page-title"><?php _e( 'Nothing Found', 'myknowledgebase' ); ?></h1>
-			<p><?php _e('Sorry, no posts matched your criteria.', 'myknowledgebase'); ?></p>
-	<?php endif; ?>
+	<?php else: ?>
+		<h1 class="page-title"><?php _e( 'Nothing Found', 'myknowledgebase' ); ?></h1>
+		<p><?php _e('Sorry, no posts matched your criteria.', 'myknowledgebase'); ?></p>
 
+	<?php endif; ?>
 </div>
 <?php get_sidebar(); ?>
 <?php get_footer(); ?>
