@@ -66,7 +66,7 @@ address {margin:10px 0; font-size:1.2em; line-height:1.5em; font-style:italic;}
 p {margin:0 0 10px;}
 
 
-/* TABLE AND HTML TAGS */
+/* TABLE AND LISTS */
 table {margin:10px 0; border-collapse:collapse;}
 table, th, td {border: 1px solid #eee; padding:5px 10px;}
 table th {font-weight:bold;}
