@@ -5,66 +5,67 @@
 
 // Sets up theme defaults and registers various WordPress features that MyKnowledgeBase supports
 	function myknowledgebase_setup() { 
+		// Set max content width for img, video, and more
+			global $content_width; 
+			if ( ! isset( $content_width ) )
+			$content_width = 780;
 
-	// Set max content width for img, video, and more
-		global $content_width; 
-		if ( ! isset( $content_width ) )
-		$content_width = 780;
+		// Make theme available for translation
+			load_theme_textdomain('myknowledgebase', get_template_directory() . '/languages');  
 
-	// Make theme available for translation
-		load_theme_textdomain('myknowledgebase', get_template_directory() . '/languages');  
+		// Register Menu
+			register_nav_menus( array( 
+				'primary' => __( 'Primary Navigation', 'myknowledgebase' ), 
+		 	) ); 
 
-	// Register Menu
-		register_nav_menus( array( 
-			'primary' => __( 'Primary Navigation', 'myknowledgebase' ), 
-	 	) ); 
+		// Add document title
+			add_theme_support( 'title-tag' );
 
-	// Add document title
-		add_theme_support( 'title-tag' );
+		// Add editor styles
+			add_editor_style( 'custom-editor-style.css' );
 
-	// Add editor styles
-		add_editor_style( 'custom-editor-style.css' );
+		// Custom header	
+			$header_args = array(		
+				'width' => 600,
+				'height' => 400,
+				'default-image' => get_template_directory_uri() . '/images/boats.jpg',
+				'header-text' => false,
+				'uploads' => true,
+			);	
+			add_theme_support( 'custom-header', $header_args );
 
-	// Custom header	
-		$header_args = array(		
-			'width' => 600,
-			'height' => 400,
-			'default-image' => get_template_directory_uri() . '/images/boats.jpg',
-			'header-text' => false,
-			'uploads' => true,
-		);	
-		add_theme_support( 'custom-header', $header_args );
+		// Default header
+			register_default_headers( array(
+				'boats' => array(
+					'url' => get_template_directory_uri() . '/images/boats.jpg',
+					'thumbnail_url' => get_template_directory_uri() . '/images/boats.jpg',
+					'description' => __( 'Default header', 'myknowledgebase' )
+				)
+			) );
 
-	// Default header
-		register_default_headers( array(
-			'boats' => array(
-				'url' => get_template_directory_uri() . '/images/boats.jpg',
-				'thumbnail_url' => get_template_directory_uri() . '/images/boats.jpg',
-				'description' => __( 'Default header', 'myknowledgebase' )
-			)
-		) );
+		// Post thumbnails
+			add_theme_support( 'post-thumbnails' ); 
 
-	// Post thumbnails
-		add_theme_support( 'post-thumbnails' ); 
+		// Resize mode thumbnails
+			set_post_thumbnail_size( 250, 250 ); 
 
-	// Resize mode thumbnails
-		set_post_thumbnail_size( 250, 250 ); 
+		// Resize single page thumbnail
+			add_image_size( 'single', 250, 250 ); 
 
-	// Resize single page thumbnail
-		add_image_size( 'single', 250, 250 ); 
+		// This feature adds RSS feed links to html head 
+			add_theme_support( 'automatic-feed-links' );
 
-	// This feature adds RSS feed links to html head 
-		add_theme_support( 'automatic-feed-links' );
+		// Switch default core markup for search form, comment form, comments and caption to output valid html5
+			add_theme_support( 'html5', array( 'search-form', 'comment-form', 'comment-list', 'caption' ) );
 
-	// Switch default core markup for search form, comment form, comments and caption to output valid html5
-		add_theme_support( 'html5', array( 'search-form', 'comment-form', 'comment-list', 'caption' ) );
+		// Background color
+			$background_args = array( 
+				'default-color' => 'ffffff', 
+			); 
+			add_theme_support( 'custom-background', $background_args );
 
-	// Background color
-		$background_args = array( 
-			'default-color' => 'ffffff', 
-		); 
-		add_theme_support( 'custom-background', $background_args ); 
-
+		// Post formats
+			add_theme_support( 'post-formats', array( 'aside', 'status', 'image', 'video', 'gallery', 'audio' ) );
 	}
 	add_action( 'after_setup_theme', 'myknowledgebase_setup' ); 
 
@@ -87,6 +88,7 @@
 		if ( is_singular() && comments_open() && get_option( 'thread_comments' ) ) {
 			wp_enqueue_script( 'comment-reply' );
 		}
+
 		// mobile nav args
 		$myknowledgebase_mobile_nav_args = array(
 			'navText' => __( 'Menu', 'myknowledgebase' )
@@ -99,56 +101,55 @@
 
 // Sidebars
 	function myknowledgebase_widgets_init() {
-	register_sidebar( array(
-		'name' => __( 'Primary Sidebar', 'myknowledgebase' ),
-		'id' => 'primary',
-		'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
-		'before_widget' => '<div id="%1$s" class="widget %2$s">',
-		'after_widget' => '</div>',
-		'before_title' => '<h3 class="widgettitle">',
-		'after_title' => '</h3>',
-	) );
+		register_sidebar( array(
+			'name' => __( 'Primary Sidebar', 'myknowledgebase' ),
+			'id' => 'primary',
+			'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
+			'before_widget' => '<div id="%1$s" class="widget %2$s">',
+			'after_widget' => '</div>',
+			'before_title' => '<h3 class="widgettitle">',
+			'after_title' => '</h3>',
+		) );
 
-	register_sidebar( array(
-		'name' => __( 'Homepage Sidebar', 'myknowledgebase' ),
-		'id' => 'homepage',
-		'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
-		'before_widget' => '<div id="%1$s" class="widget %2$s">',
-		'after_widget' => '</div>',
-		'before_title' => '<h3 class="widgettitle">',
-		'after_title' => '</h3>',
-	) );
+		register_sidebar( array(
+			'name' => __( 'Homepage Sidebar', 'myknowledgebase' ),
+			'id' => 'homepage',
+			'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
+			'before_widget' => '<div id="%1$s" class="widget %2$s">',
+			'after_widget' => '</div>',
+			'before_title' => '<h3 class="widgettitle">',
+			'after_title' => '</h3>',
+		) );
 
-	register_sidebar( array(
-		'name' => __( 'Footer Right', 'myknowledgebase' ),
-		'id' => 'footer-right',
-		'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
-		'before_widget' => '<div id="%1$s" class="widget %2$s">',
-		'after_widget' => '</div>',
-		'before_title' => '<h3 class="widgettitle">',
-		'after_title' => '</h3>',
-	) );
+		register_sidebar( array(
+			'name' => __( 'Footer Right', 'myknowledgebase' ),
+			'id' => 'footer-right',
+			'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
+			'before_widget' => '<div id="%1$s" class="widget %2$s">',
+			'after_widget' => '</div>',
+			'before_title' => '<h3 class="widgettitle">',
+			'after_title' => '</h3>',
+		) );
 
-	register_sidebar( array(
-		'name' => __( 'Footer Middle', 'myknowledgebase' ),
-		'id' => 'footer-middle',
-		'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
-		'before_widget' => '<div id="%1$s" class="widget %2$s">',
-		'after_widget' => '</div>',
-		'before_title' => '<h3 class="widgettitle">',
-		'after_title' => '</h3>',
-	) );
+		register_sidebar( array(
+			'name' => __( 'Footer Middle', 'myknowledgebase' ),
+			'id' => 'footer-middle',
+			'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
+			'before_widget' => '<div id="%1$s" class="widget %2$s">',
+			'after_widget' => '</div>',
+			'before_title' => '<h3 class="widgettitle">',
+			'after_title' => '</h3>',
+		) );
 
-	register_sidebar( array(
-		'name' => __( 'Footer Left', 'myknowledgebase' ),
-		'id' => 'footer-left',
-		'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
-		'before_widget' => '<div id="%1$s" class="widget %2$s">',
-		'after_widget' => '</div>',
-		'before_title' => '<h3 class="widgettitle">',
-		'after_title' => '</h3>',
-	) );
-
+		register_sidebar( array(
+			'name' => __( 'Footer Left', 'myknowledgebase' ),
+			'id' => 'footer-left',
+			'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
+			'before_widget' => '<div id="%1$s" class="widget %2$s">',
+			'after_widget' => '</div>',
+			'before_title' => '<h3 class="widgettitle">',
+			'after_title' => '</h3>',
+		) );
 	}
 	add_action( 'widgets_init', 'myknowledgebase_widgets_init' );
 
