@@ -6,15 +6,17 @@
 
 <!DOCTYPE html>
 <html <?php language_attributes(); ?> >
+
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="<?php bloginfo( 'charset' ); ?>">
 <link rel="profile" href="http://gmpg.org/xfn/11">
-<link rel="pingback" href="<?php bloginfo( 'pingback_url' ); ?>">
-
+<?php if ( is_singular() && pings_open( get_queried_object() ) ) : ?>
+	<link rel="pingback" href="<?php bloginfo( 'pingback_url' ); ?>">
+<?php endif; ?>
 <?php wp_head(); ?>
-
 </head>
+
 <body <?php body_class(); ?> >
 <div id="container">
 
