@@ -10,9 +10,13 @@
 	<?php while (have_posts()) : the_post(); ?>
 
 		<div id="post-<?php the_ID(); ?>" <?php post_class(); ?>> 
-			<h1 class="page-title-post"><?php the_title(); ?></h1>
+			<h1 class="post-title-single"><?php the_title(); ?></h1>
 
 			<?php get_template_part( 'postmeta' ); ?>
+
+			<?php if (has_post_format('status') ) {?>
+				<?php printf( '<a href="%1$s">%2$s</a>', esc_url( get_author_posts_url( get_the_author_meta( 'ID' ) ) ), get_avatar( get_the_author_meta( 'ID' ), 96 )  ); ?>
+			<?php } ?>
 	
 			<?php the_content(); ?>
 
